# pdf-generator

./: .gitignore  README.md  mypy.ini  pyproject.toml  setup.cfg
examples/: html5.py  html5_css.py  jinja_html_template.py  jinja_mapped_data.py  jinja_named_template.py
examples/templates/: base_layout.html  content.html  data_table.html  footer.html  simple_page.html
pdf_generator/: __init__.py  config.py  pdf_generator.py  types.py
tests/: test_pdf_generator.py
