[tool.poetry]
name = "pdf-generator"
version = "0.1.0"
description = ""
authors = ["Tauã Gomes de Almeida <tauan96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
weasyprint = "^60.2"
Jinja2 = "^3.1.2"
pydantic = "^2.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^23.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
